--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,37 +1,56 @@
 version: '3.8'
-
 services:
   db:
-    image: postgres:13
+    image: postgres:16
+    ports:
+      - '5432:5432'
+    networks:
+      - app-network
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
 
   redis:
     image: redis:6
+    networks:
+      - app-network
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-    ports:
-      - "6379:6379"
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     volumes:
       - redis_data:/data
-    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    restart: unless-stopped
 
   api:
-    build: .
-    ports:
-      - "8080:8080"
+    image: niumandzi/api-app:main
+    networks:
+      - app-network
+    environment:
+      POSTGRES_HOST: db
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      REDIS_HOST: redis
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      API_PORT: ${API_PORT}
+      TG_KEY: ${TG_KEY}
+      LOG_LEVEL: ${LOG_LEVEL}
     volumes:
-      - ./configs/dev.yaml:/app/config.yaml
+      - ./logs:/app/logs
     depends_on:
       - db
       - redis
+    restart: unless-stopped
 
 volumes:
   db_data:
   redis_data:
+
+networks:
+  app-network:
+    name: app-network
+    driver: bridge
