--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
 
   redis:
     image: redis:6
+    ports:
+      - '6379:6379'
     networks:
       - app-network
     environment:
@@ -24,16 +26,19 @@ services:
     restart: unless-stopped
 
   api:
-    image: niumandzi/api-app:main
+    build:
+      context: .
+    ports:
+      - '8080:8080'
     networks:
       - app-network
     environment:
-      POSTGRES_HOST: db
+      POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-      REDIS_HOST: redis
+      REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
       API_PORT: ${API_PORT}
